fix: wave (overflow-x)

--- a/Frontend/src/app/globals.css
+++ b/Frontend/src/app/globals.css
@@ -24,6 +24,8 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+      overflow-x: hidden;
+
 }
 
 @layer utilities {
